--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reactpractice",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jefferycarmichael.github.io",
+  "homepage": "https://jefferycarmichael.github.io/clickgame",
   "dependencies": {
     "axios": "^0.18.0",
     "gh-pages": "^1.2.0",
